Revamp plotting method to be more flexible

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(print,contsimmap)
 S3method(root,edges)
 S3method(subset,contsimmap)
 S3method(summary,contsimmap)
+export(alter.cols)
 export(anc.edges)
 export(as.simmap)
 export(des.edges)
