Explore modeling frameworks plus other various updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,10 @@ export(alter.cols)
 export(anc.edges)
 export(as.simmap)
 export(des.edges)
+export(diffusion)
 export(edge.ranges)
+export(fit.model)
+export(get.node.vals)
 export(get.tip.vals)
 export(make.contsimmap)
 export(make.traits)
@@ -22,7 +25,16 @@ export(nnode)
 export(nsim)
 export(ntip)
 export(ntrait)
+export(prep.dat)
 export(sim.conthistory)
 export(sis.edges)
 export(threshold)
 export(tip.edges)
+import(Rcpp)
+import(ape)
+import(graphics)
+import(methods)
+import(phytools)
+importFrom(rstan,optimizing)
+importFrom(rstan,sampling)
+useDynLib(contsimmap, .registration=TRUE)
