Various updates that I can't fully remember (sorry)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,9 +37,12 @@ export(des.edges)
 export(diffusion)
 export(edge.inds)
 export(edge.ranges)
+export(find.mle)
 export(get.nodes)
 export(get.tips)
 export(make.contsimmap)
+export(make.cor)
+export(make.lik.fun)
 export(make.traits)
 export(nedge)
 export(nnode)
@@ -48,6 +51,7 @@ export(ntip)
 export(root.edges)
 export(sim.conthistory)
 export(sis.edges)
+export(summarize.times)
 export(summarize.traits)
 export(threshold)
 export(tip.edges)
