Documentation for make.contsimmap/sim.conthistory, plot.contsimmap; fix some bugs in plot.contsimmap; other misc updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,7 +38,9 @@ export(diffusion)
 export(edge.inds)
 export(edge.ranges)
 export(find.mle)
+export(get.contrasts)
 export(get.nodes)
+export(get.param.info)
 export(get.tips)
 export(make.contsimmap)
 export(make.cor)
